Bug 307220 - telepathy icon in systemtray is bigger than the other icons
Summary: telepathy icon in systemtray is bigger than the other icons
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: presence-applet (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: 0.5-next
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2012-09-22 16:59 UTC by Gernot Wieprecht
Modified: 2012-11-19 03:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.1
Sentry Crash Report:


Attachments
screenshot of tray (6.34 KB, image/jpeg)
2012-09-22 17:16 UTC, Gernot Wieprecht
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gernot Wieprecht 2012-09-22 16:59:57 UTC
All icons (png and svg) in the system have a size of 24 or 22 (something between 16 and 32) - except one: the telepathy icon. It seems to use the size of the "small icons"! That is very laudable and I like bigger icons, but in this case it really messes up the tray and literally is out of place.

Reproducible: Always

Steps to Reproduce:
1. Set "small icons" to size 48 or 32.
2. Activate telepathy module for the tray.
3. Maybe you need to make the panel higher and log off and back in.


Expected Results:  
All tray icons should have the same size.
Comment 1 David Edmundson 2012-09-22 17:05:53 UTC
So it does:

    int iconSize = IconSize(KIconLoader::Small);
    setMinimumSize(QSize(iconSize, iconSize));

this should only happen when form factor is Plasma::Planar.
Comment 2 Gernot Wieprecht 2012-09-22 17:16:03 UTC
Created attachment 74093 [details]
screenshot of tray

In this screenshot you can see the systemtray with the telepathy icon while the size of the "small icons" is set to 48.
Comment 3 Gernot Wieprecht 2012-09-22 18:00:40 UTC
(In reply to comment #1)
> this should only happen when form factor is Plasma::Planar.

is this something *I* should check?
Comment 4 David Edmundson 2012-09-22 18:02:32 UTC
Oh, no. 

I was commenting for the other KTp developers, explaining the fix that needs doing.
Sorry about any confusion.

A patch fixing this is made already, just waiting on my lazy colleagues to review it :)
Comment 5 David Edmundson 2012-09-22 23:12:40 UTC
> Git commit 14749c6dd9545c7236761efab9c7fc73e6bed0d1 by David Edmundson.
> Committed on 22/09/2012 at 19:07.
> Pushed by davidedmundson into branch 'kde-telepathy-0.5'.
>
> Only set minimum size when not in a panel
> Reviewed-by: Daniele E. Domenichelli
>
> M  +4    -2    src/presenceapplet.cpp
Comment 6 David Edmundson 2012-11-19 03:30:22 UTC
Git commit 14749c6dd9545c7236761efab9c7fc73e6bed0d1 by David Edmundson.
Committed on 22/09/2012 at 19:07.
Pushed by davidedmundson into branch 'master'.

Only set minimum size when not in a panel
Reviewed-by: Daniele E. Domenichelli

M  +4    -2    src/presenceapplet.cpp

http://commits.kde.org/telepathy-presence-applet/14749c6dd9545c7236761efab9c7fc73e6bed0d1