Only set minimum size when not in a panel

BUG: 307220
Reviewed-by: Daniele E. Domenichelli