presence/src/presence-applet.cpp
@@ -65,8 +65,10 @@ TelepathyPresenceApplet::TelepathyPresenceApplet(QObject *parent, const QVariant
     layout->setAlignment(m_icon, Qt::AlignCenter);
     setLayout(layout);
 
-    int iconSize = IconSize(KIconLoader::Small);
-    setMinimumSize(QSize(iconSize, iconSize));
+    if (formFactor() == Plasma::Planar) {
+        int iconSize = IconSize(KIconLoader::Small);
+        setMinimumSize(QSize(iconSize, iconSize));
+    }
 
     connect(m_globalPresence, SIGNAL(currentPresenceChanged(KTp::Presence)), this, SLOT(onPresenceChanged(KTp::Presence)));
 
